welcome.lessons.welcome.methods.basics.Methods.scala.code
        def goAndGet() {

		var nbre:Int = 0;

		while (!estSurbiscuit()) 
		{
			avance();
			nbre = nbre + 1;
		}
		prendBiscuit();
		for (i <- 1 to nbre)
		{
			recule();
		}
		poseBiscuit();
        
        }

        for (i <- 1 to 7) {
            goAndGet();
            right();
            forward();
            left();
        }
